[tool.poetry]
name = "climpca"
version = "0.1.0"
description = "Software to reconstruct missing data in climate datasets using PCA"
authors = ["Étienne Plésiat"]
license = "BSD 3-Clause"
readme = "README.md"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'License :: OSI Approved :: BSD License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    "Programming Language :: Python :: 3.10",
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">= 3.9.13"
tqdm = ">= 4.64.1"
cuml = ">= 22.10.00"
numpy = ">= 1.23.4"
xarray = ">= 2022.10.0"
netcdf4 = ">=1.5.7"
setuptools = "==59.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
climpca = "climpca.main:climpca"
